Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-13284

mariadb-server: fil_load_single_table_tablespace(): mysqld killed by SIGABRT

    XMLWordPrintable

Details

    Description

      Hello,

      I got here following issue:
      RHBZ 1468115
      RHBZ 1468255

      For both I have cool retrace informations like this, URLs can be found right before 1st comment in the bugzillas.

      On one hand, the workaround could be easy - disable the problematic plugin by deafult.
      On the other hand, the SIGABRT code shows, there is most probabbly issue in the code.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              mschorm Michal Schorm
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2.5h
                  2.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.